@@ -1,3 +1,7 @@
+2004-10-09  Derek Price  <derek@ximbiot.com>
+
+	* config.h.in.in (optopt, optind, optarg): Define these for GNULIB.
+
 2004-10-07  Derek Price  <derek@ximbiot.com>
 
 	* Makefile.am (EXTRA_DIST): Remove stripslash.c.
